Change snake movement and colliding algorithms, refactor